# SDGKeyboardDesign

./: .gitignore  .travis.yml  LICENSE.md  Package.resolved  Package.swift  README.md  Workspace.swift  index.html
.github/: CONTRIBUTING.md
.github/workflows/: Amazon Linux.yaml  Android.yaml  CentOS.yaml  Documentation Deployment.yaml  Miscellaneous.yaml  Swift 5.4 Amazon Linux.yaml  Swift 5.4 Android.yaml  Swift 5.4 CentOS.yaml  Swift 5.4 Ubuntu.yaml  Swift 5.4 Web.yaml  Swift 5.4 Windows.yaml  Swift 5.4 iOS.yaml  Swift 5.4 macOS.yaml  Swift 5.4 tvOS.yaml  Swift 5.4 watchOS.yaml  Swift 5.7 (Amazon Linux).yaml  Swift 5.7 (Android).yaml  Swift 5.7 (Ubuntu).yaml  Swift 5.7 (Web).yaml  Swift 5.7 (Windows).yaml  Swift 5.7 (iOS).yaml  Swift 5.7 (macOS).yaml  Swift 5.7 (tvOS).yaml  Swift 5.7 (watchOS).yaml  Ubuntu.yaml  Web.yaml  Windows.yaml  Workspace Validation.yaml  iOS.yaml  macOS.yaml  tvOS.yaml  watchOS.yaml
.github/workflows/Windows/: CMakeLists.txt  WindowsMain.swift
SDGKeyboardDesign/: metadata.json
SDGKeyboardDesign/data/documentation/: sdgkeyboarddesign.json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/: about.json  arrangement.json  deadkey.json  importing.json  keyboardlayout.json  keyboardlayoutbundle.json  layer.json  library-products.json  osxscriptcode.json  related-projects.json  symbol.json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/arrangement/: ansilowercase.json  ansiuppercase.json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/deadkey/: defaultlabels.json  defaultmappings.json  descender.json  doublequoteenglish.json  hook.json  hyphenminusenglish.json  singlequoteenglish.json  stroke.json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/keyboardlayout/: init(name:icon:layers:deadkeylabels:deadkeymappings:symbols:uniqueidentifier:script:targetedlanguage:).json  keylayoutfile().json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/keyboardlayoutbundle/: generate(in:).json  init(name:layouts:copyright:bundleidentifier:).json  macoskeyboardlayoutbundleinfoplist().json  macoskeyboardlayoutbundlelocalizedinfopliststrings(_:).json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/layer/: !=(_:_:).json  '...(_:)-9ujky.json  '...(_:)-d0wj.json  '...(_:_:).json  '.._(_:).json  '.._(_:_:).json  =_(_:_:).json  _(_:_:)-1pvuy.json  _(_:_:)-44hb0.json  _(_:_:)-7odsl.json  _(_:_:)-8ekdr.json  _=(_:_:)-2hf7g.json  _=(_:_:)-57mn.json  capslock.json  capslockoption.json  capslockshift.json  capslockshiftoption.json  command.json  comparable-implementations.json  cyclicpredecessor().json  cyclicsuccessor().json  decrease(to:).json  decrement().json  decrementcyclically(_:).json  equatable-implementations.json  increase(to:).json  increment().json  incrementcyclically(_:).json  nomodifiers.json  option.json  orderedenumeration-implementations.json  predecessor().json  shift.json  shiftcommand.json  shiftoption.json  successor().json
SDGKeyboardDesign/data/documentation/sdgkeyboarddesign/osxscriptcode/: !=(_:_:).json  =_(_:_:).json  chinesesimplified.json  chinesetraditional.json  cyrillic.json  (+10 more)
SDGKeyboardDesign/documentation/sdgkeyboarddesign/arrangement/: index.html
Sources/SDGKeyboardDesign/: Arrangement.swift  Casing.swift  DeadKey.swift  Int.swift  KeyboardLayout.swift  KeyboardLayoutBundle.swift  Layer.swift  OSXScriptCode.swift  Sequence.swift  Symbol.swift  XMLElement.swift
Sources/SDGKeyboardDesign/Symbols/: Arrows.swift  CardSuits.swift  Chemistry.swift  Copyright.swift  Correctness.swift  Currency.swift  Flags.swift  Footnotes.swift  Gender.swift  KeyLabels.swift  LayoutGlyphs.swift  LocalizedSymbol.swift  Logic.swift  MathematicalConstants.swift  MathematicalOperators.swift  MathematicalRelations.swift  Miscellaneous.swift  Music.swift  Numerals.swift  Phonetics.swift  SetLogic.swift  SymbolData.swift  Units.swift
Sources/SDGKeyboardDesignLocalizations/: ContentLocalization.swift
Sources/SDGKeyboardDesignXMLShims/: Windows.swift  XMLDTD.swift  XMLDocument.swift  XMLElement.swift  XMLNode.Options.swift  XMLNode.swift
Tests/: LinuxMain.swift
Tests/SDGKeyboardDesignDocumentationExampleTests/: ReadMeExampleTests.swift
Tests/SDGKeyboardDesignTests/: APITests.swift  InternalTests.swift  RegressionTests.swift  TestKeyboardLayout.swift  XMLElement.swift
Tests/Test Specifications/: Limit Test.keylayout
Tests/Test Specifications/Test Keyboard/: Information Property List Strings.txt  Information Property List.txt  Key Layout.txt  Unusual Identifier.txt
Tests/WindowsTests/: main.swift
🇨🇦EN/: About.html  Importing.html  Related Projects.html  SDGKeyboardDesign.html  index.html
🇨🇦EN/Libraries/: SDGKeyboardDesign.html
🇨🇦EN/Modules/: SDGKeyboardDesign.html
🇨🇦EN/Types/: Arrangement.html  DeadKey.html  KeyboardLayout<L>.html  KeyboardLayoutBundle<L>.html  Layer.html  OSXScriptCode.html  Symbol.html
🇨🇦EN/Types/Arrangement/Type Properties/: ansiLowercase.html  ansiUppercase.html
🇨🇦EN/Types/DeadKey/Type Properties/: defaultLabels.html  defaultMappings.html  descender.html  doubleQuoteEnglish.html  hook.html  hyphenMinusEnglish.html  singleQuoteEnglish.html  stroke.html
🇨🇦EN/Types/KeyboardLayout<L>/Initializers/: init(name:icon:layers:deadKeyLabels:deadKeyMappings:symbols:uniqueIdentifier:script:targetedLanguage:).html
🇨🇦EN/Types/KeyboardLayout<L>/Methods/: keyLayoutFile().html
🇨🇦EN/Types/KeyboardLayoutBundle<L>/Initializers/: init(name:layouts:copyright:bundleIdentifier:).html
🇨🇦EN/Types/KeyboardLayoutBundle<L>/Methods/: generate(in:).html  macOSKeyboardLayoutBundleInfoPlist().html  macOSKeyboardLayoutBundleLocalizedInfoPlistStrings(_:).html
🇨🇦EN/Types/Layer/Cases/: capsLock.html  capsLockOption.html  capsLockShift.html  capsLockShiftOption.html  command.html  noModifiers.html  option.html  shift.html  shiftCommand.html  shiftOption.html
🇨🇦EN/Types/OSXScriptCode/Cases/: chineseSimplified.html  chineseTraditional.html  cyrillic.html  japanese.html  korean.html  latinEastern.html  latinWestern.html  none.html
🇨🇦EN/Types/Symbol/Type Properties/: defaultDictionary.html  key.html
(+5 files in other folders)
